fix: fix overflow

--- a/src/scss/pages/kata-train.scss
+++ b/src/scss/pages/kata-train.scss
@@ -57,7 +57,6 @@
   &__line-counter {
     width: 40px;
     height: 100%;
-    overflow-y: scroll;
     font-size: 14px;
     line-height: 17.5px;
     color: var(--grey-text);
